cancel navigate home

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -208,7 +208,7 @@
                     </template>
  
                     <div class="footer">
-                        <div class="button cancel" onclick={closePopup}>Cancel</div>
+                        <div class="button cancel" onclick={cancel}>Cancel</div>
                         <div class="button next" onclick={next}>Next</div>
                     </div> 
                 </div>
