--- a/force-app/main/default/lwc/generateDocument/generateDocument.html
+++ b/force-app/main/default/lwc/generateDocument/generateDocument.html
@@ -11,7 +11,7 @@
             <div class="template-select-div">
                 <div class="title-text">Select Template</div>
                 <div class="template-select-inner flex-div">
-                    <c-custome-combo-box
+                    <c-custom-combobox
                         class="template-select flex-item"
                         options={templateList}
                         placeholder = 'Select Template'
@@ -21,7 +21,7 @@
                         dropdown-position = 'left'
                         required = true
                         onselect={handleSelectTemplate}
-                    ></c-custome-combo-box>
+                    ></c-custom-combobox>
                     <button class="edit-btn flex-item" onclick={handleEditTemplate}>
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="#04ADFE" d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4 10.4-18 23.3-22.2 37.4L1 480.7c-2.5 8.4-.2 17.5 6.1 23.7s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L387.7 253.7 410.3 231zM160 399.4l-9.1 22.7c-4 3.1-8.5 5.4-13.3 6.9L59.4 452l23-78.1c1.4-4.9 3.8-9.4 6.9-13.3l22.7-9.1v32c0 8.8 7.2 16 16 16h32zM362.7 18.7L348.3 33.2 325.7 55.8 314.3 67.1l33.9 33.9 62.1 62.1 33.9 33.9 11.3-11.3 22.6-22.6 14.5-14.5c25-25 25-65.5 0-90.5L453.3 18.7c-25-25-65.5-25-90.5 0zm-47.4 168l-144 144c-6.2 6.2-16.4 6.2-22.6 0s-6.2-16.4 0-22.6l144-144c6.2-6.2 16.4-6.2 22.6 0s6.2 16.4 0 22.6z"/></svg>
                         Edit Template 
@@ -122,10 +122,38 @@
                 </div>
 
                 <div class="btn-div">
-                    <button class="bottom-btn send-mail-btn" onclick={handleSendMail}>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"/></svg>
-                        &nbsp; Send Email
+                    <button class="bottom-btn send-mail-btn" if:false={isSendEmail} onclick={handleSendMail}>
+                        Send Email
+                        <div class="email-svg-div">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#04ADFE" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+                        </div>
                     </button>
+                    <button class="bottom-btn send-mail-btn" if:true={isSendEmail} onclick={handleSendMail}>
+                        Don't Send
+                        <div class="email-svg-div">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="#04ADFE" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+                        </div>
+                    </button>
+                </div>
+                <div class="email-create-div" if:true={isSendEmail}>
+                    <div class="to-div email-element">
+                        <span>To:</span>
+                        <input type="text" placeholder="example1@gmail.com"></input>
+                    </div>
+                    <div class="subject-div email-element">
+                        <span>Subject:</span>
+                        <input type="text" placeholder="Enter Subject"></input>
+                    </div>
+                    <div class="body-div email-element">
+                        <span>Body:</span>
+                        <lightning-input-rich-text
+                          value='value'
+                        ></lightning-input-rich-text>
+                    </div>
+                </div>
+
+                <div class="btn-div">
+                    
                     <div class="control-btns">
                         <button class="preview-btn bottom-btn control-btn">Preview</button>
                         <button class="generate-btn bottom-btn control-btn">Generate</button>
