--- a/force-app/main/default/lwc/customCombobox/customCombobox.html
+++ b/force-app/main/default/lwc/customCombobox/customCombobox.html
@@ -3,8 +3,8 @@
       <div class="inputAreaCSS_1 searchBarCSS slds-form-element">
         <!-- == == == label == == ==  -->
         <template lwc:if={label}>
-          <label class=" slds-form-element__label" style="width: 100%; padding-left: 4px;" onclick={closeDropDown}>
-            <template lwc:if={isRequired}><abbr title="required" class="slds-required">*</abbr></template>
+          <label class=" slds-form-element__label label-div" onclick={closeDropDown}>
+            <template lwc:if={required}><abbr title="required" class="slds-required">*</abbr></template>
             {label}
           </label>
         </template>
@@ -13,7 +13,7 @@
             <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click" data-id="slds-combobox">
               <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
                 <!-- === == ==  for seachable comobox == == ==  -->
-                <template lwc:if={isSeachable}>
+                <template lwc:if={searchable}>
                   <input type="text" class="inputAreaCSS_2 slds-input slds-combobox__input" role="combobox" placeholder={placeholderText} 
                           onfocus={handleShowDropDown}
                           onkeyup={handleSearch}
@@ -33,13 +33,13 @@
                     </span>
                 </template>
                 <!-- ===== ==== ====== When Option Is Selected (for single Selectet) ===== ====== ===== ====== -->
-                <template if:false={isMultiSelect}>
+                <template if:false={multiselect}>
                   <template lwc:if={selectedOptionLabel}>
                     <div class="optionPosition slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
                       <div role="combobox" tabindex="0"  onclick={handleShowDropDown} class="inputAreaSectiedValueCSS slds-input_faux slds-combobox__input slds-combobox__input-value" >
                         <span class=" slds-truncate">{selectedOptionLabel}</span>
                       </div>
-                      <button class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" onclick={clearSelection} title="Clear the text input">
+                      <button if:true={showClearButton} class="slds-button slds-button_icon slds-input__icon slds-input__icon_right" onclick={clearSelection} title="Clear the text input">
                         <lightning-icon class="" icon-name="utility:close" alternative-text="Approved" title="Approved" size="x-small" ></lightning-icon>
                         <span class="slds-assistive-text">Clear the text input</span>
                       </button>
@@ -50,16 +50,33 @@
               <!-- ===== ==== ====== DropDown Div) ===== ====== ===== ====== -->
               <div style={setDropDownPosition} class="dropDownCSS slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid" role="listbox" tabindex="0" aria-busy="false">
                 <ul class="slds-listbox slds-listbox_vertical" role="presentation">
-                  <template for:each={dispayOptions} for:item="item" for:index="index">
-                    <li role="presentation" class="slds-listbox__item" key={item.value} data-label={item.label} data-value={item.value} data-index={index} data-oriindex={item.originalIndex} onclick={handleOptionClick}>
+                  <template for:each={displayOptions} for:item="item" for:index="index">
+                    <li role="presentation" class="slds-listbox__item" key={item.value} data-label={item.label} data-value={item.value} 
+                        data-index={index} data-oriindex={item.originalIndex} onclick={handleOptionClick}>
                       <div style="position: relative;" class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small" role="option">
                         <!-- === === when option is Selected show overlay === ===  -->
+                        <template if:true={item.disabled}>
+                          <div class="disabledItem" data-id="disabledItem" onclick={handleDisableClick} ondblclick={handleDisableClick} onmouseover={handleDisableClick} onmouseenter={handleDisableClick} onmouseout={handleDisableClick} onmouseup={handleDisableClick} onmousedown={handleDisableClick}>
+                          </div>
+                        </template>
                         <template if:true={item.isSelected}>
                           <div class="selectedItem" data-id="searchBox"></div>
                         </template>
-                        <span class="slds-media__figure slds-listbox__option-icon"></span>
+                        <span if:true={showIcon} class="optionIcon slds-media__figure slds-listbox__option-icon">
+                          <lightning-icon if:true={iconName} icon-name={iconName} ></lightning-icon>
+                          <span if:false={iconName} class="emptyImgPadding"></span>
+                        </span>
+                        <span if:false={showIcon} class="emptyImgPadding"></span>
                         <span class="slds-media__body">
-                          <span class=" slds-truncate" >{item.label}</span>
+                          <span class="slds-truncate" >{item.label}</span>
+                          <template lwc:if={showDescription}>
+                              <span if:true={item.description} class="option-description">{item.description}</span>
+                              <span if:false={item.description} class="option-description">---</span>
+                          </template>
+                        </span>
+                        <span if:true={showHelpText} class="optionInfo">
+                          <lightning-helptext if:true={item.helptext} content={item.helptext}></lightning-helptext>
+                          <lightning-helptext if:false={item.helptext} content=" ... "></lightning-helptext>
                         </span>
                       </div>
                     </li>
