--- a/force-app/main/default/lwc/newTemplateCreation/newTemplateCreation.html
+++ b/force-app/main/default/lwc/newTemplateCreation/newTemplateCreation.html
@@ -2,9 +2,10 @@
     <template if:true={showModel}>
         <section role="dialog" tabindex="-1" aria-modal="true" aria-labelledby="modal-heading-01" class="slds-modal slds-fade-in-open">
             <c-message-popup></c-message-popup>
-            <div class="spinner-div" if:true={doShowSpinner}>
+            <c-document-loader display={doShowSpinner}></c-document-loader>
+            <!-- <div class="spinner-div" if:true={doShowSpinner}>
                 <c-spinner></c-spinner>
-            </div>
+            </div> -->
             <div class="main-div">
                 <div class="image-div">
                     <img class="image" onload={imageLoaded} src={templateImage} alt="New Template Image">
