--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -1,76 +1,80 @@
 <template>
     <div class="body">
-        <div class="tabSection">
-            <div class="tabSection_sub">
-              <div class="homeBtn" onclick={cancel}>
-                <svg viewBox="0 0 24 24">
-                  <g stroke-width="0"></g>
-                  <g stroke-linecap="round" stroke-linejoin="round"></g>
-                  <g>
-                    <path
-                      d="M21.71,11.29l-9-9a1,1,0,0,0-1.42,0l-9,9a1,1,0,0,0,1.42,1.42l.29-.3V20.3A1.77,1.77,0,0,0,5.83,22H8.5a1,1,0,0,0,1-1V16.1a1,1,0,0,1,1-1h3a1,1,0,0,1,1,1V21a1,1,0,0,0,1,1h2.67A1.77,1.77,0,0,0,20,20.3V12.41l.29.3a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,11.29Z">
-                    </path>
-                  </g>
-                </svg>
-              </div>
-              <div class="tab" data-name="contentTab" onclick={activeTab}>
-                <svg viewBox="0 0 24 24">
-                  <path
-                    d="M1 2V5H3V4H5V9H3.5V11H8.5V9H7V4H9V5H11V2H1ZM21 3H14V5H20V19H4V14H2V20C2 20.5523 2.44772 21 3 21H21C21.5523 21 22 20.5523 22 20V4C22 3.44772 21.5523 3 21 3Z">
-                  </path>
-                </svg>
-                <div>Template Content</div>
-              </div>
-              <div class="tab" data-name="basicTab" onclick={activeTab}>
-                <svg viewBox="0 0 24 24">
-                  <path
-                    d="M20 22H4C3.44772 22 3 21.5523 3 21V3C3 2.44772 3.44772 2 4 2H20C20.5523 2 21 2.44772 21 3V21C21 21.5523 20.5523 22 20 22ZM19 20V4H5V20H19ZM7 6H11V10H7V6ZM7 12H17V14H7V12ZM7 16H17V18H7V16ZM13 7H17V9H13V7Z">
-                  </path>
-                </svg>
-                <div>Basic Deatils</div>
-              </div>
-              <div class="templateName">
-                <div class="recordSVG" onclick={activeTab} data-name="basicTab">
-                  <svg viewBox="0 0 1024 1024">
-                    <g stroke-width="0"></g>
-                    <g stroke-linecap="round" stroke-linejoin="round"></g>
-                    <g>
+        <div class="sub_body">
+            <div class="tabSection">
+                <div class="tabSection_sub">
+                  <div class="homeBtn" onclick={cancel}>
+                    <svg viewBox="0 0 24 24">
+                      <g stroke-width="0"></g>
+                      <g stroke-linecap="round" stroke-linejoin="round"></g>
+                      <g>
+                        <path
+                          d="M21.71,11.29l-9-9a1,1,0,0,0-1.42,0l-9,9a1,1,0,0,0,1.42,1.42l.29-.3V20.3A1.77,1.77,0,0,0,5.83,22H8.5a1,1,0,0,0,1-1V16.1a1,1,0,0,1,1-1h3a1,1,0,0,1,1,1V21a1,1,0,0,0,1,1h2.67A1.77,1.77,0,0,0,20,20.3V12.41l.29.3a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,11.29Z">
+                        </path>
+                      </g>
+                    </svg>
+                  </div>
+                  <div class="tab" data-name="contentTab" onclick={activeTab}>
+                    <svg viewBox="0 0 24 24">
                       <path
-                        d="M714 762.2h-98.2c-16.6 0-30 13.4-30 30s13.4 30 30 30H714c16.6 0 30-13.4 30-30s-13.4-30-30-30zM487.4 762.2H147.1c-16.6 0-30 13.4-30 30s13.4 30 30 30h340.3c16.6 0 30-13.4 30-30s-13.4-30-30-30z"
-                        fill="#33CC99"></path>
-                      <path d="M838.253 130.023l65.548 65.548-57.982 57.983-65.549-65.549z" fill="#6be6ff"></path>
-                      <path
-                        d="M743.7 955.9H195.8c-53.7 0-97.4-43.7-97.4-97.4V174.8c0-53.7 43.7-97.4 97.4-97.4H615c16.6 0 30 13.4 30 30s-13.4 30-30 30H195.8c-20.6 0-37.4 16.8-37.4 37.4v683.7c0 20.6 16.8 37.4 37.4 37.4h547.9c20.6 0 37.4-16.8 37.4-37.4v-395c0-16.6 13.4-30 30-30s30 13.4 30 30v395.1c0 53.6-43.7 97.3-97.4 97.3z"
-                        fill="#000000"></path>
-                      <path
-                        d="M907.7 122.1l-39.2-39.2c-24-24-65.1-21.9-91.7 4.7L419.5 445 347 643.6l198.6-72.4L903 213.8c12.1-12.1 19.6-27.7 21.1-44 1.8-18.1-4.3-35.5-16.4-47.7zM512.6 519.3L447.5 543l23.7-65.1 264.7-264.7 40.9 41.7-264.2 264.4z m348-347.9l-41.3 41.3-40.9-41.7 40.9-40.9c3.1-3.1 6.2-3.9 7.6-3.9l37.6 37.6c-0.1 1.3-0.9 4.5-3.9 7.6z">
+                        d="M1 2V5H3V4H5V9H3.5V11H8.5V9H7V4H9V5H11V2H1ZM21 3H14V5H20V19H4V14H2V20C2 20.5523 2.44772 21 3 21H21C21.5523 21 22 20.5523 22 20V4C22 3.44772 21.5523 3 21 3Z">
                       </path>
-                    </g>
-                  </svg>
-                </div>
-                <div class="templateNameText">
-                  {templateRecord.Template_Name__c}
+                    </svg>
+                    <div>Template Content</div>
+                  </div>
+                  <div class="tab" data-name="basicTab" onclick={activeTab}>
+                    <svg viewBox="0 0 24 24">
+                      <path
+                        d="M20 22H4C3.44772 22 3 21.5523 3 21V3C3 2.44772 3.44772 2 4 2H20C20.5523 2 21 2.44772 21 3V21C21 21.5523 20.5523 22 20 22ZM19 20V4H5V20H19ZM7 6H11V10H7V6ZM7 12H17V14H7V12ZM7 16H17V18H7V16ZM13 7H17V9H13V7Z">
+                      </path>
+                    </svg>
+                    <div>Basic Deatils</div>
+                  </div>
+                 
+                  <div class="templateName">
+                    <div class="recordSVG" onclick={activeTab} data-name="basicTab">
+                      <svg viewBox="0 0 1024 1024">
+                        <g stroke-width="0"></g>
+                        <g stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g>
+                          <path
+                            d="M714 762.2h-98.2c-16.6 0-30 13.4-30 30s13.4 30 30 30H714c16.6 0 30-13.4 30-30s-13.4-30-30-30zM487.4 762.2H147.1c-16.6 0-30 13.4-30 30s13.4 30 30 30h340.3c16.6 0 30-13.4 30-30s-13.4-30-30-30z"
+                            fill="#33CC99"></path>
+                          <path d="M838.253 130.023l65.548 65.548-57.982 57.983-65.549-65.549z" fill="#6be6ff"></path>
+                          <path
+                            d="M743.7 955.9H195.8c-53.7 0-97.4-43.7-97.4-97.4V174.8c0-53.7 43.7-97.4 97.4-97.4H615c16.6 0 30 13.4 30 30s-13.4 30-30 30H195.8c-20.6 0-37.4 16.8-37.4 37.4v683.7c0 20.6 16.8 37.4 37.4 37.4h547.9c20.6 0 37.4-16.8 37.4-37.4v-395c0-16.6 13.4-30 30-30s30 13.4 30 30v395.1c0 53.6-43.7 97.3-97.4 97.3z"
+                            fill="#000000"></path>
+                          <path
+                            d="M907.7 122.1l-39.2-39.2c-24-24-65.1-21.9-91.7 4.7L419.5 445 347 643.6l198.6-72.4L903 213.8c12.1-12.1 19.6-27.7 21.1-44 1.8-18.1-4.3-35.5-16.4-47.7zM512.6 519.3L447.5 543l23.7-65.1 264.7-264.7 40.9 41.7-264.2 264.4z m348-347.9l-41.3 41.3-40.9-41.7 40.9-40.9c3.1-3.1 6.2-3.9 7.6-3.9l37.6 37.6c-0.1 1.3-0.9 4.5-3.9 7.6z">
+                          </path>
+                        </g>
+                      </svg>
+                    </div> 
+                    <div class="templateNameText">
+                      {templateName}
+                    </div>
+                  </div>
+                  <div class="activeTabBar"></div>
                 </div>
               </div>
-              <div class="activeTabBar"></div>
+            
+            <div class="main">
+                <template lwc:if={webViewLink}>
+                    <iframe src={webViewLink}></iframe>
+                </template>
+                <c-key-mapping-container 
+                  class="fieldMappingContainer desicionContainer"
+                  data-name="fieldMappingContainer" 
+                  object-name={objectName} 
+                  save-button-label="Save" 
+                  preview-button-label="Save &#38; Preview"
+                  cancel-button-label="Save &#38; Close" 
+                  onsave={saveTemplateDataIframe} 
+                  onpreview={handleSaveNPreviewIframe}
+                  onclose={handleSaveNCloseIframe} 
+                  ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
             </div>
-          </div>
-        <!-- <div class="tabSection">Tabsection</div> -->
-        <div class="main">
-            <template lwc:if={webViewLink}>
-                <iframe src={webViewLink}></iframe>
-            </template>
-            <c-key-mapping-container 
-              class="fieldMappingContainer desicionContainer"
-              data-name="fieldMappingContainer" 
-              object-name={objectName} 
-              save-button-label="Save" 
-              preview-button-label="Save &#38; Preview"
-              cancel-button-label="Save &#38; Close" 
-              onsave={saveTemplateDataIframe} 
-              onpreview={handleSaveNPreviewIframe}
-              onclose={handleSaveNCloseIframe} 
-              ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
+
         </div>
 
     <template if:false={isSpinner}>
