--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -59,25 +59,33 @@
               </div>
             
             <template if:false={isSpinner}>
+            <!-- <template lwc:if={selectedTemplate}> -->
                 <template if:false={showPopup}>
                     <div class="main">
-                        <template lwc:if={webViewLink}>
-                            <iframe src={webViewLink}></iframe>
+                        <template if:true={contentTab}>
+                            <template lwc:if={webViewLink}>
+                                <iframe src={webViewLink} onloadstart={iframeLoadnig} onload={iframeLoaded}></iframe>
+                            </template>
+                            <c-key-mapping-container 
+                              class="fieldMappingContainer desicionContainer"
+                              data-name="fieldMappingContainer" 
+                              object-name={objectName} 
+                              save-button-label="Save" 
+                              preview-button-label="Save &#38; Preview"
+                              cancel-button-label="Save &#38; Close" 
+                              onsave={saveTemplateDataIframe} 
+                              onpreview={handleSaveNPreviewIframe}
+                              onclose={handleSaveNCloseIframe} 
+                              ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
                         </template>
-                        <c-key-mapping-container 
-                          class="fieldMappingContainer desicionContainer"
-                          data-name="fieldMappingContainer" 
-                          object-name={objectName} 
-                          save-button-label="Save" 
-                          preview-button-label="Save &#38; Preview"
-                          cancel-button-label="Save &#38; Close" 
-                          onsave={saveTemplateDataIframe} 
-                          onpreview={handleSaveNPreviewIframe}
-                          onclose={handleSaveNCloseIframe} 
-                          ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
+                        <template if:true={basicTab}>
+                            <h1>BASIC TAB</h1>
+                        </template>
+
                     </div>
                 </template>
             </template>
+            <!-- </template> -->
             
 
         </div>
