Add tab iframe loader

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -58,8 +58,8 @@
                 </div>
               </div>
             
-            <template if:false={isSpinner}>
-            <!-- <template lwc:if={selectedTemplate}> -->
+            <!-- <template if:false={isSpinner}> -->
+            <template lwc:if={webViewLink}>
                 <template if:false={showPopup}>
                     <div class="main">
                         <template if:true={contentTab}>
