tab section done

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -61,8 +61,8 @@
             <!-- <template if:false={isSpinner}> -->
             <template lwc:if={webViewLink}>
                 <template if:false={showPopup}>
-                    <div class="main">
-                        <template if:true={contentTab}>
+                    <template if:true={contentTab}>
+                            <div class="main">
                             <template lwc:if={webViewLink}>
                                 <iframe src={webViewLink} onloadstart={iframeLoadnig} onload={iframeLoaded}></iframe>
                             </template>
@@ -77,12 +77,13 @@
                               onpreview={handleSaveNPreviewIframe}
                               onclose={handleSaveNCloseIframe} 
                               ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
+                            </div>
                         </template>
-                        <template if:true={basicTab}>
+                    <template if:true={basicTab}>
+                        <div class="basicTab">
                             <h1>BASIC TAB</h1>
-                        </template>
-
-                    </div>
+                        </div>
+                    </template>
                 </template>
             </template>
             <!-- </template> -->
