tab using display instead of true false.

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -61,7 +61,7 @@
             <!-- <template if:false={isSpinner}> -->
             <template lwc:if={webViewLink}>
                 <template if:false={showPopup}>
-                    <template if:true={contentTab}>
+                    <!-- <template if:true={contentTab}> -->
                             <div class="main">
                             <template lwc:if={webViewLink}>
                                 <iframe src={webViewLink} onloadstart={iframeLoadnig} onload={iframeLoaded}></iframe>
@@ -78,12 +78,12 @@
                               onclose={handleSaveNCloseIframe} 
                               ontogglemapping={showHideMappingContainer}></c-key-mapping-container>
                             </div>
-                        </template>
-                    <template if:true={basicTab}>
+                        <!-- </template> -->
+                    <!-- <template if:true={basicTab}> -->
                         <div class="basicTab">
                             <h1>BASIC TAB</h1>
                         </div>
-                    </template>
+                    <!-- </template> -->
                 </template>
             </template>
             <!-- </template> -->
