--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -80,8 +80,19 @@
                             </div>
                         <!-- </template> -->
                     <!-- <template if:true={basicTab}> -->
-                        <div class="basicTab">
-                            <h1>BASIC TAB</h1>
+                        <div class="basicTab" >
+
+                            <div class="desicionContainer updateDeatilContainer">
+                                <h1>Basic Details</h1>
+                                <div class="buttonSection">
+                                  <lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={handleSaveNCloseIframe}
+                                    icon-name="utility:close" icon-position="left"></lightning-button>
+                                  <lightning-button label="Preview" title="Preview" onclick={handleSaveNPreviewIframe}
+                                    icon-name="utility:preview" icon-position="left"></lightning-button>
+                                  <lightning-button variant="brand" label="Save" onclick={saveTemplateDataIframe} title="Save"
+                                    icon-name="utility:save" icon-position="left"></lightning-button>
+                                </div>
+                              </div>
                         </div>
                     <!-- </template> -->
                 </template>
