Basic Details done

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -172,14 +172,14 @@
                                             </template>
                                             </div>
                                         </div>
-                                        <div class="pageConfigs">
+                                        <!-- <div class="pageConfigs">
                                           <div class="pageConfigTitle">Page Configurations</div>
                                           <div class="pageConfig_sub">
                                               <div class="dummyPageContainer">
                                                   <div class="dummyPage"></div>
                                               </div> 
                                           </div>
-                                        </div>
+                                        </div> -->
                                       </div>
                                 </div>
                                 <div class="buttonSection">
