--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -183,11 +183,11 @@
                                       </div>
                                 </div>
                                 <div class="buttonSection">
-                                  <lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={handleSaveNCloseIframe}
+                                  <lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={cancelEditTemplate}
                                     icon-name="utility:close" icon-position="left"></lightning-button>
                                   <lightning-button label="Preview" title="Preview" onclick={handleSaveNPreviewIframe}
                                     icon-name="utility:preview" icon-position="left"></lightning-button>
-                                  <lightning-button variant="brand" label="Save" onclick={saveTemplateDataIframe} title="Save"
+                                  <lightning-button variant="brand" label="Save" onclick={editTemplateDetails} title="Save"
                                     icon-name="utility:save" icon-position="left"></lightning-button>
                                 </div>
                               </div>
