--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -407,7 +407,7 @@
             </div>
         </template>
     </template>
-        <c-document-loader display={isSpinner} fix-top="true"></c-document-loader>
+        <c-document-loader display={isSpinner} fix-top="true"  label={loaderLabel}></c-document-loader>
         <c-message-popup></c-message-popup>
         <template lwc:if={isPreview}>
             <c-template-preview-modal templateid={templateId} objectname={objectName}
