--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -185,10 +185,10 @@
                                       </div>
                                 </div>
                                 <div class="buttonSection">
-                                  <lightning-button variant="destructive" label="Cancel" title="Cancel" onclick={cancelEditTemplate}
+                                  <lightning-button variant="destructive" label="Close" title="Close" onclick={cancel}
                                     icon-name="utility:close" icon-position="left"></lightning-button>
-                                  <!-- <lightning-button label="Preview" title="Preview" onclick={handleSaveNPreviewIframe}
-                                    icon-name="utility:preview" icon-position="left"></lightning-button> -->
+                                  <lightning-button label="Reset" title="Reset" onclick={cancelEditTemplate}
+                                    icon-name="utility:undo" icon-position="left"></lightning-button>
                                   <lightning-button variant="brand" label="Save" onclick={editTemplateDetails} title="Save"
                                     icon-name="utility:save" icon-position="left"></lightning-button>
                                 </div>
