select google document

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -207,7 +207,7 @@
             <div class="section">
                 <div class="main">
                     <div class="firstRow">
-                        <div class="title">Select Google Doc</div>
+                        <div class="title">Select Google Document</div>
                         <div class="profile">
                             <div class="userData">
                                 <div class="username">{profile.username} </div>
