Add user image in profile

--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -213,10 +213,11 @@
                                 <div class="username">{profile.username} </div>
                                 <div class="email">{profile.email}</div>
                             </div>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="profileIcon" viewBox="0 0 32 32" fill="none">
+                            <img src={profile.photolink} alt="" srcset="" class="profileIcon">
+                            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="profileIcon" viewBox="0 0 32 32" fill="none">
                                 <rect width="32" height="32" rx="16" fill="#00AEFF"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M23 20.9584V21.6C23 22.3584 22.3583 23 21.6 23H10.4C9.64167 23 9 22.3584 9 21.6V20.9584C9 19.2667 10.9833 18.2167 12.85 17.4L13.025 17.3125C13.1708 17.2542 13.3167 17.2542 13.4625 17.3417C14.2208 17.8375 15.0667 18.1 15.9708 18.1C16.875 18.1 17.75 17.8084 18.4792 17.3417C18.625 17.2542 18.7708 17.2542 18.9167 17.3125L19.0917 17.4C21.0167 18.2167 23 19.2375 23 20.9584ZM16.0001 9C17.9251 9 19.4709 10.7208 19.4709 12.85C19.4709 14.9792 17.9251 16.7 16.0001 16.7C14.0751 16.7 12.5293 14.9792 12.5293 12.85C12.5293 10.7208 14.0751 9 16.0001 9Z" fill="white"/>
-                            </svg>
+                            </svg> -->
                         </div>
                     </div>
                     <div class="secondRow">
