--- a/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
+++ b/force-app/main/default/lwc/googleDocTemplateEditor/googleDocTemplateEditor.html
@@ -177,11 +177,12 @@
                                       </div>
                                 </div>
                                 <div class="buttonSection">
-                                  <lightning-button variant="destructive" label="Close" title="Close" onclick={cancel}
+                                  <!-- <lightning-button variant="destructive" label="Close" title="Close" onclick={cancel}
                                     icon-name="utility:close" icon-position="left"></lightning-button>
-                                  
                                   <lightning-button variant="brand" label="Save" onclick={editTemplateDetails} title="Save"
-                                    icon-name="utility:save" icon-position="left"></lightning-button>
+                                    icon-name="utility:save" icon-position="left"></lightning-button> -->
+                                    <button type="button" class="button cancel" onclick={cancel}>Cancel</button>
+                                    <button type="button" class="button next" onclick={editTemplateDetails}>Save</button>
                                 </div>
                               </div>
                         </div>
